[project]
name = "comfyui-maskbatchpermutations"
description = "Permutes a mask batch to present possible additive combinations. Passing a mask batch (e.g. out of [a/SEGS to Mask Batch](https://github.com/ltdrdata/ComfyUI-Impact-Pack)) will return a new mask batch representing all the possible combinations of the included masks. So, a mask batch with two mask sections, 'A' and 'B', will return a batch containing an empty mask, an empty mask & A, an empty mask & B, and an empty mask & A & B."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/curiousjp/ComfyUI-MaskBatchPermutations"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-MaskBatchPermutations"
Icon = ""
